en voila un commit

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # PathForExperiments
 PathForExperimentsERC_SL.m
 PathForExperimentsERC_Dima.m
+PathForExperimentsERC.m
 
 # Saving functions
 ChooseFolderForFigures_DB.m
