Update and rename PathForExperiments: can now take into account all mice where the ann results lie

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 # PathForExperiments
 PathForExperimentsERC_SL.m
 PathForExperimentsERC_Dima.m
-PathForExperimentsERC.m
+# PathForExperimentsERC.m
 
 # Saving functions
 ChooseFolderForFigures_DB.m
 
 # Matlab autosave extension
 *.m~
+*.asv
